# rinkuzu-ai-api

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  API_CONTRACT.md  AUDIT_BE.md  CLAUDE.md  CONTENT_PIPELINE_ENV.md  CONTENT_PIPELINE_MIGRATION_MAP.md  Dockerfile  README.md  check_mongo.py  config.py  openapi.json  pyproject.toml  requirements.in  requirements.txt  skills-lock.json
.github/: CODEOWNERS  dependabot.yml  dependency-review-config.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql-analysis.yml  openapi-contract.yml  repo-guardrails.yml  sync-hf-space.yml
api/: config.py  dependencies.py  error_codes.py  exceptions.py  lifespan.py  main.py  observability.py  rate_limit.py  requirements.txt  schemas.py  security.py
api/core/: agent.py  content_pipeline.py  environment.py  exercise_gen.py  llm.py  mongo_store.py  quiz_tutor.py  session.py  subject_progress_snapshot.py  tutor_chat.py
api/core/content_pipeline/: __init__.py  orchestrator.py
api/core/learning/: __init__.py  agent.py  answer_eval.py  environment.py  exercise_gen.py  exercise_service.py  exercise_types.py  history_formatter.py  models.py  session.py  subject_progress_snapshot.py
api/core/quiz/: __init__.py  draft_service.py  draft_tasks.py  extraction.py  quiz_tutor.py  tutor_chat.py
api/core/shared/: __init__.py  document_text.py  llm.py  llm_usage.py  mongo_store.py  retry.py  s3.py  url_fetch.py
api/domains/assistant/: __init__.py  agui.py  context_tokens.py  documents.py  legacy_router.py  repository.py  router.py  schemas.py  service.py  streaming.py
api/domains/content_pipeline/: router.py  schemas.py
api/domains/learning/: __init__.py  (+17 more)
api/middleware/: request_context.py
api/repositories/: __init__.py  base.py  pipeline_repo.py  quiz_draft_repo.py  session_repo.py  subject_progress_repo.py
api/routers/: admin_ocr_keys.py  admin_usage.py  history.py  knowledge.py  pipeline.py  quiz_drafts.py  quiz_extract.py  quiz_tutor.py  session.py
api/schemas/: __init__.py  admin_ocr_keys.py  admin_usage.py  common.py  enums.py  exercise.py  history.py  knowledge.py  pipeline.py  quiz_draft.py  quiz_tutor.py  session.py  validators.py
api/services/: __init__.py  exercise_service.py
api/shared/: __init__.py  document_text.py  llm.py  llm_usage.py  mongo_store.py  ocr_key_crypto.py  retry.py  url_fetch.py
content-processor/: .gitignore  eval_lecture_bank.py  eval_lecture_bank_quick.py  eval_sweep_thresholds.py  full_pipeline_app.py  requirements_api.txt
content-processor/docs/: EVALUATION_GUIDE.md  EVALUATION_LECTURE_BANK.md  Nghiên cứu và Phát triển Mô hình Học sâu Xác định Quan hệ Tiên quyết giữa các Khái niệm Học tập STEM (1).md
content-processor/notebook/: LandingAI.ipynb  dots_ocr.ipynb
content-processor/research/: Báo cáo Nghiên cứu Toàn diện_ Các Mô hình Xác định Quan hệ Tiên quyết trong Khái niệm Học thuật STEM.md
content-processor/src/: __init__.py
contracts/: api-error-codes.json
docs/: ARCHITECTURE.md  CONTENT_PIPELINE_ENV.md  CONTENT_PIPELINE_MIGRATION_MAP.md  DEFENSE_PREP.md
docs/plans/: 2026-03-26-rag-tutor-chat-design.md
embed/: __init__.py  embedding_client.py  embeddings.py  prereq_ranking.py
graph/: __init__.py  builder.py  cycle_removal.py  reduction.py
llm/: __init__.py  extract_chain.py  postprocess.py  schemas.py
merge/: __init__.py  embed_dedupe.py  name_merge.py
models/: README.md  concept_pca16.npz  dqn_best.pt  dqn_dueling_legacy.pt  prereq_mlp.pth  prereq_vimath_bgem3_namedef_concat_rich.metadata.json  prereq_vimath_bgem3_namedef_concat_rich.pth  saint_best.pt
processors/: __init__.py  errors.py  factory.py
processors/chunkers/: __init__.py  text_chunker.py
processors/loaders/: __init__.py  base.py  pdf_loader.py  vision_pdf_loader.py
prompts/: __init__.py
scripts/: benchmark_pipeline_status.py  dependency_runtime_smoke.py  export_openapi.py  migrate_chunk_generations.py  migrate_exercise_payload.py  perf-be.sh  profile_be_smoke.py  reset_persistence_for_beanie_cutover.py
storage/: __init__.py  chroma_store.py
tests/: conftest.py  locustfile.py  perf_readiness.py  test_admin_ocr_keys.py  test_admin_usage.py  test_api_envelope_guard.py  test_api_error_codes_contract.py  test_ask_rin_conversation_routes.py  test_benchmark_smoke.py  test_config.py  test_dependencies.py  test_dependency_runtime_smoke.py  test_exceptions.py  test_health_contract.py  test_history_delete_subject.py  test_history_progress_503.py  test_history_thresholds.py  test_knowledge_router.py  test_legacy_ask_rin_routes.py  test_lifespan_janitor.py  test_lifespan_logging.py  test_lifespan_rag_initialization.py  test_llm_retry_tenacity.py  test_llm_usage.py  test_locust_readiness.py  test_manual_quiz_draft.py  test_orjson_response.py  test_otel_smoke.py  test_pipeline_job_status.py  test_pipeline_list_jobs.py  test_pipeline_process.py  test_pipeline_retry_after.py  test_pipeline_retry_cancel.py  test_pipeline_status_contract.py  test_quiz_draft_contract.py  test_quiz_draft_delete_route.py  test_quiz_draft_storage_taxonomy.py  test_rate_limit.py  test_security.py  test_session_router_chat.py  (+1 more)
tests/core/: test_answer_eval_delegates.py  test_ask_rin_agui.py  test_ask_rin_chan.py  test_ask_rin_chan_vision.py  test_ask_rin_error_contract.py  test_ask_rin_repository.py  test_document_text.py  test_exercise_gen_llm.py  test_exercise_gen_openai.py  test_exercise_gen_payload.py  test_exercise_gen_retry.py  test_exercise_service.py  test_exercise_service_payload.py  test_exercise_types.py  test_grading_prompt.py  test_history_formatter_payload.py  test_llm_json_repair.py  test_llm_streaming.py  test_llm_structured_instructor.py  test_mongo_store.py  test_prompt_builder.py  test_prompt_registry.py  test_prompt_spec_from_handler.py  test_quiz_draft_service.py  test_quiz_draft_tasks.py  test_quiz_extraction.py  test_quiz_tutor.py  test_tutor_chat.py
tests/scripts/: test_migrate_chunk_generations.py  test_migrate_exercise_payload.py
tests/utils/: test_text.py
utils/: __init__.py  mime.py  text.py  timeit.py
(+260 files in other folders)
