[build-system]
requires = ["setuptools>=78.1.1,<82", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
api = ["py.typed"]

[project]
name = "rinkuzu-ai-api"
version = "1.0.0"
description = "FastAPI backend for Rinkuzu adaptive learning and content pipeline services."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.27",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "aiofiles>=24.1.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "scikit-learn>=1.3.0",
    "gymnasium>=0.29.0",
    "langchain-core>=1.3.3",
    "langchain-openai>=0.1.0",
    "langchain-chroma>=0.1.0",
    "langchain-text-splitters>=0.1.0",
    "pypdf>=6.10.2",
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "chromadb>=0.5.0",
    "underthesea>=1.3.0",
    "pyvi>=0.0.2",
    "pymupdf>=1.24.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "beanie==2.1.0",
    "pymongo>=4.6.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "openai>=2.24.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.11.7",
    "bandit>=1.8.0",
    "pip-audit>=2.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["api", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
    "ANN",
    "D",
    "E501",
    "B008",
    "FIX",
    "TD",
    "CPY",
    "PD",
    "EM101",
    "EM102",
    "TRY003",
    "PLR0913",
    "FAST002",
    "SLF001",
    "TID252",
    "BLE001",
    "PLW0603",
    "PLR0912",
    "PLR0915",
    "PLC0415",
    "TRY301",
    "ASYNC110",
    "S101",
    "S105",
    "S106",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "S105",
    "S106",
    "ARG001",
    "ARG002",
    "N803",
    "PLR2004",
    "RET501",
]
"api/main.py" = [
    "E402",
]

[tool.ruff.lint.isort]
known-first-party = ["api"]
force-sort-within-sections = true

[tool.ruff.lint.pylint]
max-args = 10
max-returns = 8

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict_optional = true
no_implicit_optional = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = false
files = ["api"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "beanie.*",
    "chromadb.*",
    "underthesea.*",
    "pyvi.*",
    "sentence_transformers.*",
    "gymnasium.*",
    "aiofiles.*",
    "loguru.*",
    "boto3.*",
    "botocore.*",
]
ignore_missing_imports = true
