[build-system]
requires = ["setuptools>=83,<84", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
api = ["py.typed"]

[project]
name = "rinkuzu-ai-api"
version = "1.0.0"
description = "FastAPI backend for Rinkuzu adaptive learning and content pipeline services."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.27",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.14.2",
    "aiofiles>=24.1.0",
    "orjson>=3.10",
    "sse-starlette>=2.1.3",
    # 2.13+cpu declares setuptools>=77.0.3 (compatible with build-system setuptools>=83).
    # Pin via the explicit pytorch-cpu index only (see [tool.uv.sources]).
    "torch>=2.13,<2.14",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "scikit-learn>=1.3.0",
    "gymnasium>=0.29.0",
    "langchain-core>=1.3.3",
    "langchain-chroma>=0.1.0",
    "langchain-text-splitters>=0.1.0",
    "pypdf>=6.13.3",
    "tenacity>=8.2",
    "APScheduler>=3.10",
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "chromadb>=0.5.0",
    "underthesea>=1.3.0",
    "pyvi>=0.0.2",
    "pymupdf>=1.24.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "beanie==2.1.0",
    "pymongo>=4.6.0",
    "cryptography>=42.0.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "google-auth>=2.35.0",
    "langsmith>=0.8.18",
    "instructor>=1.15.4",
    "litellm>=1.85.1",
    "slowapi>=0.1.9",
    "urllib3>=2.7.0",
]

# Official PyTorch CPU wheel index; explicit=true so it is never a global default.
# Only packages listed under [tool.uv.sources] resolve from this index.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "pyinstrument>=4.6",
    "py-spy>=0.3",
    "ruff>=0.11.7",
    "scalene>=1.5",
    "memray>=1.13",
    "locust>=2.20",
    "vulture>=2.10",
    "radon>=6.0",
    "xenon>=0.9",
    "bandit>=1.8.0",
    "pip-audit>=2.8.0",
]
otel = [
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-pymongo>=0.46b0",
    "opentelemetry-exporter-otlp>=1.25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["api", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
    "ANN",
    "D",
    "E501",
    "B008",
    "FIX",
    "TD",
    "CPY",
    "PD",
    "EM101",
    "EM102",
    "TRY003",
    "PLR0913",
    "FAST002",
    "SLF001",
    "TID252",
    "BLE001",
    "PLW0603",
    "PLR0912",
    "PLR0915",
    "PLC0415",
    "TRY301",
    "ASYNC110",
    "S101",
    "S105",
    "S106",
    "E402",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "S105",
    "S106",
    "S108",
    "ARG001",
    "ARG002",
    "ARG005",
    "N803",
    "PLR2004",
    "RET501",
    "INP001",
]
"scripts/**/*.py" = [
    "ARG001",
    "ARG002",
    "ARG005",
    "S603",
    "S607",
]
"api/main.py" = [
    "E402",
]

[tool.ruff.lint.isort]
known-first-party = ["api"]
force-sort-within-sections = true

[tool.ruff.lint.pylint]
max-args = 10
max-returns = 8

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict_optional = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
warn_unreachable = true
no_implicit_reexport = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = false
files = ["api"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "apscheduler.*",
    "apscheduler",
    "beanie.*",
    "beanie",
    "chromadb.*",
    "chromadb",
    "fitz",
    "underthesea",
    "pyvi",
    "sentence_transformers",
    "gymnasium",
    "aiofiles",
    "loguru",
    "boto3",
    "botocore.client",
    "networkx",
    "sklearn.metrics.pairwise",
    "torch",
    "transformers",
    "langchain_chroma",
    "opentelemetry.*",
    "opentelemetry",
]
ignore_missing_imports = true
